# lohup

./: LICENSE  README.md  lohup-cli.py  lohup-cli.spec  main.py  pyproject.toml
examples/: complete.toml
src/lohup/: __init__.py  app.py  cli.py  config.py  expander.py  logger.py  restic.py  rustic.py  util.py
tests/: test_validate.py
