[project]
name = "lohup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "humanize>=4.13.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=8.4.1",
]

[project.scripts]
lohup = "lohup.cli:cli"

[tool.uv]
package = true
